some more pathmanager tests